--- a/notebooks/PCA_Example.ipynb
+++ b/notebooks/PCA_Example.ipynb
@@ -648,7 +648,8 @@
     "  * Hints\n",
     "    * Take a look at S (from the SVD decomposition)\n",
     "    * Take a look at how the matrix was built\n",
-    "    * Take a look at the scatter plots"
+    "    * Take a look at the scatter plots\n",
+    "    * Take a look at the covariance matrix (specially the off-diagonal values)"
    ]
   },
   {
